Fix home page height on mobile

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,4 +1,8 @@
 .container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
     background-color: var(--background-element);
 
     .wrapper {
