--- a/src/styles/global/reset.scss
+++ b/src/styles/global/reset.scss
@@ -8,11 +8,13 @@
 * {
   margin: 0;
   line-height: calc(1em + 0.5rem);
+  scrollbar-width: none;
 }
 
 html,
 body {
-  height: 100%;
+  height: 100vh;
+  min-height: -webkit-fill-available;
 }
 
 body {
