--- a/src/styles/pages/Chat.module.scss
+++ b/src/styles/pages/Chat.module.scss
@@ -2,7 +2,7 @@
    width: clamp(30rem, 97vw, 60rem);
    height: calc(100vh - var(--header-height));
    margin-inline: auto;
-   padding-block: 1rem;
+   padding-block: calc(var(--header-height) + 1rem) 1rem;
    display: flex;
    justify-content: center;
 
