--- a/src/styles/pages/Home.module.scss
+++ b/src/styles/pages/Home.module.scss
@@ -1,8 +1,9 @@
 .container {
-    height: calc(100vh - var(--header-height));
+    height: 100vh;
+    min-height: -webkit-fill-available;
     max-width: 120rem;
     padding-inline: clamp(1rem, 3vw, 3.75rem);
-    padding-top: clamp(1rem, 3vw, 2.75rem);
+    padding-top: calc(var(--header-height) + clamp(1rem, 3vw, 2.75rem));
     display: grid;
     gap: clamp(.7rem, 2.5vw, 2rem) clamp(1rem, 3vw, 3.75rem);
     margin-inline: auto;
