--- a/src/styles/pages/Property.module.scss
+++ b/src/styles/pages/Property.module.scss
@@ -1,9 +1,9 @@
 .container {
-   margin-block: 1.75rem;
    padding-inline: 1rem;
    display: flex;
    flex-direction: column;
    gap: 1rem;
+   padding-top: calc(var(--header-height) + 1.75rem);
 
    .property {
       max-width: 50rem;
